--- a/SCME.UI/ReportTemplate.html
+++ b/SCME.UI/ReportTemplate.html
@@ -1,13 +1,21 @@
 ﻿<html><head>
 <style>
-table, th, td {
+
+#table1, #table1 th, #table1 td {
   border: 1px solid black;
   border-collapse: collapse;
 }
-table.center {
+
+#table2 td, #table1 tr
+{
+}
+
+table.center 
+{
   margin-left: auto;
   margin-right: auto;
 }
+
 h1 {text-align: center;}
 h2 {text-align: center;}
 </style>
